# cad_brep_euler

./: CMakeLists.txt  README.md
src/: b-rep.cpp  b-rep.h  camera.h  controller.cpp  controller.h  creation.cpp  creation.h  euleroperation.cpp  euleroperation.h  glad.c  main.cpp  renderer.cpp  renderer.h  shader.h
src/shader/: frag_shader.glsl  vert_shader.glsl
